# tensorbot

./: README.md  example.py  pyproject.toml  requirements.txt  setup.py
tensorbot/: __init__.py  bot.py  plotting.py
